--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -802,6 +802,12 @@
     "    axes[1,1].set_title('Dialogue Complexity Evolution')\n",
     "    \n",
     "    plt.tight_layout()\n",
+    "\n",
+    "    plt.savefig('character_evolution_trends.png', \n",
+    "                dpi=300,  # High resolution\n",
+    "                bbox_inches='tight',  # Prevent label cutoff\n",
+    "                pad_inches=0.5)  # Add padding\n",
+    "\n",
     "    plt.show()\n",
     "    \n",
     "    # Print summary statistics\n",
